fixed json validation of default config file

--- a/.travis.yml
+++ b/.travis.yml
@@ -58,8 +58,7 @@ script:
     - pylint --version
 
     # Run checks
-    - jsonlint *.json
-    - pylint --rcfile=.pylintrc *.py
+    - make test
 
 
 
