--- a/marvin_config_default.json
+++ b/marvin_config_default.json
@@ -4,5 +4,5 @@
     "channel":  null,
     "nick":     "marvin",
     "realname": "Marvin The All Mighty dbwebb-bot",
-    "ident":    null,
+    "ident":    null
 }
