--- a/.pylintrc
+++ b/.pylintrc
@@ -7,7 +7,7 @@
 [MESSAGES CONTROL]
 
 #disable=superfluous-parens,anomalous-backslash-in-string,bad-builtin,invalid-name
-disable=W0105,W0141,C0103,R0903,F0401,R0912,R0914,R0915,E0611,E1101,E1103,W0122,C0303,broad-except,global-statement,too-many-instance-attributes,no-self-use
+disable=W0105,W0141,C0103,R0903,F0401,R0912,R0914,R0915,E0611,E1101,E1103,W0122,C0303,broad-except,global-statement,too-many-instance-attributes,no-self-use,superfluous-parens,locally-disabled,locally-enabled
 
 
 
