--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ python:
   - "3.3"
   - "3.4"
   - "3.5"
-  - "3.5-dev" # 3.5 development branch
+  - "3.6"
+  - "3.7-dev" # 3.5 development branch
   - "nightly" # currently points to 3.6-dev
 
 
@@ -32,6 +33,7 @@ addons:
 matrix:
     allow_failures:
         - python: "3.2"
+        - python: "3.7-dev"
         - python: "nightly"
 
 
