--- a/.travis.yml
+++ b/.travis.yml
@@ -69,7 +69,10 @@ notifications:
 
     webhooks:
         urls:
+            # dbwebb?
             - https://webhooks.gitter.im/e/3921db12f0b3a95de514
+            # mosbth/irc2phpbb
+            - https://webhooks.gitter.im/e/18dd678832f9a98b1d08
 
         # options: [always|never|change] default: always
         on_success: change
