add volume to listen for incoming files/messges

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,3 +3,5 @@ services:
     marvin:
         build: .
         container_name: "MarvinBot"
+        volumes:
+            - "./incoming/:/app/incoming/"
