--- a/.github/actions/install/action.yml
+++ b/.github/actions/install/action.yml
@@ -12,5 +12,4 @@ runs:
     - name: Install dependencies
       shell: bash
       run: |
-        python -m pip install --upgrade pip
-        pip install -r .requirements.txt
+        make install-tools
