Add default marvin config for docker to reduce explanation in README

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
             dockerfile: .docker/marvin/Dockerfile
         container_name: MarvinBot
         volumes:
-            - ./marvin_config.json:/app/marvin_config.json
+            - ./.docker/marvin/marvin_docker_config.json:/app/marvin_config.json
             - ./incoming/:/app/incoming/
         depends_on:
             - ngircd
