Log chat history
Log all chat messages using the logging framework.

--- a/.docker/marvin/Dockerfile
+++ b/.docker/marvin/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3-alpine
 
 COPY . /app
-RUN mkdir -p /app
+RUN mkdir -p /app/logs
 WORKDIR /app
 
 RUN python3 -m pip install -r .requirements.txt
