--- a/.github/actions/install/action.yml
+++ b/.github/actions/install/action.yml
@@ -6,7 +6,7 @@ runs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: '3.x'
+        python-version: '3.11'
         cache: 'pip'
         cache-dependency-path: .requirements.txt
     - name: Install dependencies
